<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/quantity"
        android:padding="16dp"
       />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/incrbutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/incrbutton"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="increment"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:id="@+id/quantity_text_view"
        android:textColor="#000000"
        />
    <Button
        android:id="@+id/decrbutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/decrbutton"
        android:layout_marginLeft="16dp"
        android:onClick="decrement"
        />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/order_summary_text_view"
        android:padding="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/order_summary_text_view"
        android:textColor="#000000"
        />
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        />
</LinearLayout>
